Adicionei um parágrafo

--- a/Site_Exemplo/Index.html
+++ b/Site_Exemplo/Index.html
@@ -10,6 +10,7 @@
     <h1>Olá Mundo</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur, temporibus voluptates. Quas illo a consectetur cumque deserunt fugiat corrupti dolores itaque neque temporibus, velit illum soluta, laborum natus saepe autem?</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam, voluptas est eos nostrum, molestias at quaerat aliquam suscipit deserunt cumque quasi, ex eveniet tempore aut a recusandae autem maxime qui.</p>
 
 </body>
 </html>
